--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -1,17 +1,27 @@
 <h1>Login</h1>
 <hr>
 <div class="col-md-4">
-    <form autocomplete="off">
+    <form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" autocomplete="off">
         <div class="form-group">
             <label for="userName">User Name:</label>
-            <input id="userName" type="text" class="form-control" placeholder="User Name..." />
+            <em *ngIf="loginForm.controls.userName?.invalid &&
+            (loginForm.controls.userName?.touched || mouseOver)">
+                Required
+            </em>
+            <input (ngModel)="userName" name="userName" id="userName" type="text" class="form-control" placeholder="User Name..." />
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input id="password" type="password" class="form-control" placeholder="Password..." />
+            <em *ngIf="loginForm.controls.password.invalid &&
+            (loginForm.controls.password?.touched || mouseOver)">
+                Required
+            </em>
+            <input (ngModel)="password" name="password" id="password" type="password" class="form-control" placeholder="Password..."
+            />
         </div>
-
-        <button type="submit" class="btn btn-primary">Login</button>
-        <button type="button" class="btn btn-default">Cancel</button>
+        <span (mouseenter)="mouseOver=true" (mouseleave)="mouseOver=false">
+            <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary radius-small">Login</button>
+        </span>
+        <button (click)="cancel()" type="button" class="btn btn-default radius-small">Cancel</button>
     </form>
 </div>
