--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -8,15 +8,15 @@
             (loginForm.controls.userName?.touched || mouseOver)">
                 Required
             </em>
-            <input (ngModel)="userName" name="userName" id="userName" type="text" class="form-control" placeholder="User Name..." />
+            <input required (ngModel)="userName" name="userName" id="userName" type="text" class="form-control" placeholder="User Name..." />
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <em *ngIf="loginForm.controls.password.invalid &&
+            <em *ngIf="loginForm.controls.password?.invalid &&
             (loginForm.controls.password?.touched || mouseOver)">
                 Required
             </em>
-            <input (ngModel)="password" name="password" id="password" type="password" class="form-control" placeholder="Password..."
+            <input required (ngModel)="password" name="password" id="password" type="password" class="form-control" placeholder="Password..."
             />
         </div>
         <span (mouseenter)="mouseOver=true" (mouseleave)="mouseOver=false">
