--- a/src/app/nav/nav-bar.component.html
+++ b/src/app/nav/nav-bar.component.html
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li>
-                    <a routerLinkActive="active" [routerLink]="['/events']">All Events</a>
+                    <a routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" [routerLink]="['/events']" ngRouter>All Events</a>
                 </li>
                 <li>
-                    <a routerLinkActive="active" [routerLink]="['/create-event']">Create Event</a>
+                    <a routerLinkActive="active" [routerLink]="['/events/new']">Create Event</a>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
