--- a/src/app/events/event/event-detail/event-detail.component.html
+++ b/src/app/events/event/event-detail/event-detail.component.html
@@ -24,6 +24,21 @@
             </address>
         </div>
     </div>
+
+    <hr>
+
+    <div class="row">
+        <div class="col-md-2">
+            <h3 style="margin: 0">Sessions</h3>
+        </div>
+        <div class="col-md-2">
+            <a (click)="addMode=true">Create session</a>
+        </div>
+
+        <create-session (cancelAdding)="cancelAddSession()" (createNewSession)="saveNewSession($event)" *ngIf="addMode"></create-session>
+    </div>
+
+    <sessions-list  *ngIf="!addMode" [sessions]="event?.sessions"></sessions-list>
 </div>
 
 <router-outlet></router-outlet>
