--- a/src/app/events/event/event-detail/event-detail.component.html
+++ b/src/app/events/event/event-detail/event-detail.component.html
@@ -3,18 +3,18 @@
 
     <div class="row">
         <div class="col-md-11">
-            <h2>{{event?.name}} </h2>
+            <h2>{{event?.name | uppercase}} </h2>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-6">
             <div>
-                <strong>Date:</strong> {{event?.date}}</div>
+                <strong>Date:</strong> {{event?.date | date: 'shortDate'}}</div>
             <div>
                 <strong>Time:</strong> {{event?.time}}</div>
             <div>
-                <strong>Price:</strong> ${{event?.price}}</div>
+                <strong>Price:</strong> {{event?.price | currency: 'USD'}}</div>
         </div>
         <div class="col-md-6">
             <address>
@@ -28,17 +28,34 @@
     <hr>
 
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-1">
             <h3 style="margin: 0">Sessions</h3>
         </div>
+
+        <!-- sort and filter -->
+        <div class="col-md-7">
+            <div class="btn-group" style="margin: 0 10px">
+                <button (click)="sortBy='name'" [class.active]="sortBy==='name'" class="btn btn-default">By Name</button>
+                <button (click)="sortBy='votes'" class="btn btn-default" [class.active]="sortBy==='votes'">By Votes</button>
+            </div>
+            <div class="btn-group" style="margin: 0 10px">
+                <button (click)="filterBy='all'" [class.active]="filterBy==='all'" class="btn btn-default">All</button>
+                <button (click)="filterBy='beginner'" [class.active]="filterBy==='beginner'" class="btn btn-default">Beginner</button>
+                <button (click)="filterBy='intermediate'" [class.active]="filterBy==='intermediate'" class="btn btn-default">Intermmediate</button>
+                <button (click)="filterBy='advanced'" [class.active]="filterBy==='advanced'" class="btn btn-default">Advanced</button>
+            </div>
+        </div>
+
         <div class="col-md-2">
-            <a (click)="addMode=true">Create session</a>
+            <a class="btn btn-default" style="margin-bottom: 10px" (click)="addMode=true">Create session</a>
         </div>
 
         <create-session (cancelAdding)="cancelAddSession()" (createNewSession)="saveNewSession($event)" *ngIf="addMode"></create-session>
+
     </div>
 
-    <sessions-list  *ngIf="!addMode" [sessions]="event?.sessions"></sessions-list>
+
+    <sessions-list [sortBy]="sortBy" [filterBy]="filterBy" *ngIf="!addMode" [sessions]="event?.sessions"></sessions-list>
 </div>
 
 <router-outlet></router-outlet>
