--- a/src/app/nav/nav-bar.component.html
+++ b/src/app/nav/nav-bar.component.html
@@ -32,7 +32,8 @@
                     </li>
                 </ul>
             </div>
-            <form id="searchForm" (ngSubmit)="searchSession(searchTerm)" class="navbar-form navbar-right">
+            
+            <form id="searchForm" (ngSubmit)="searchSessions(searchTerm)" class="navbar-form navbar-right">
                 <div class="form-group">
                     <input [(ngModel)]="searchTerm" name="searchTerm" type="text" class="form-control" placeholder="Search Sessions">
                 </div>
