--- a/src/app/events/event/event-detail/session-create.component.html
+++ b/src/app/events/event/event-detail/session-create.component.html
@@ -1,66 +1,68 @@
-<div class="col-md-12">
-  <h3>Create Session</h3>
-</div>
-<div class="col-md-6">
-  <form [formGroup]="newFormGroup" (ngSubmit)="saveSession(newFormGroup.value)" autocomplete="off">
-    <div class="form-group" [ngClass]="{'error': name.invalid && name.touched}">
-      <label for="sessionName">Session Name:</label>
-      <span *ngIf="name.invalid && (name.touched || mouseOver)">
-        <em *ngIf="name.errors.required">Required</em>
+<div class="row">
+  <div class="col-md-3">
+    <h3 style="margin: 0">Create Session</h3>
+  </div>
+  <div class="col-md-6">
+    <form [formGroup]="newFormGroup" (ngSubmit)="saveSession(newFormGroup.value)" autocomplete="off">
+      <div class="form-group" [ngClass]="{'error': name.invalid && name.touched}">
+        <label for="sessionName">Session Name:</label>
+        <span *ngIf="name.invalid && (name.touched || mouseOver)">
+          <em *ngIf="name.errors.required">Required</em>
+        </span>
+        <input id="sessionName" formControlName="name" name="name" type="text" class="form-control" placeholder="session name..."
+        />
+      </div>
+      <div class="form-group" [ngClass]="{'error': presenter.invalid && presenter.touched}">
+        <label for="presenter">Presenter:</label>
+        <span *ngIf="presenter.invalid && (presenter.touched || mouseOver)">
+          <em *ngIf="presenter.errors.required">Required</em>
+        </span>
+        <input id="presenter" formControlName="presenter" type="text" class="form-control" placeholder="presenter..." />
+      </div>
+      <div class="form-group" [ngClass]="{'error': duration.invalid && duration.touched}">
+        <label for="duration">Duration:</label>
+        <span *ngIf="duration.invalid && (duration.touched || mouseOver)">
+          <em *ngIf="duration.errors.required">Required</em>
+        </span>
+        <select id="duration" formControlName="duration" class="form-control">
+          <option value="">Select duration ...</option>
+          <option value="1">Half Hour</option>
+          <option value="2">1 Hour</option>
+          <option value="3">Half Day</option>
+          <option value="4">Full Day</option>
+        </select>
+      </div>
+      <div class="form-group" [ngClass]="{'error': level.invalid && level.touched}">
+        <label for="level">Level:</label>
+        <span *ngIf="level.invalid && (level.touched || mouseOver)">
+          <em *ngIf="level.errors.required">Required</em>
+        </span>
+        <select id="level" formControlName="level" class="form-control">
+          <option value="">Select level ...</option>
+          <option value="Beginner">Beginner</option>
+          <option value="Intermediate">Intermediate</option>
+          <option value="Advanced">Advanced</option>
+        </select>
+      </div>
+      <div class="form-group" [ngClass]="{'error': abstract.invalid && abstract.touched}">
+        <label for="abstract">Abstract:</label>
+        <span *ngIf="abstract.invalid && (abstract.touched || mouseOver)">
+          <em *ngIf="abstract.errors.required">
+            Required
+          </em>
+          <em *ngIf="abstract.errors.maxLength">
+            Can not exceed 400 characters
+          </em>
+          <em *ngIf="abstract.errors.restrictedWords">
+            Restricted words found: {{ abstract.errors.restrictedWords }}
+          </em>
+        </span>
+        <textarea formControlName="abstract" id="abstract" rows=3 class="form-control" placeholder="abstract..."></textarea>
+      </div>
+      <span (mouseenter)="mouseOver=true" (mouseleave)="mouseOver=false">
+        <button type="submit" class="btn btn-primary" [disabled]="newFormGroup.invalid">Save</button>
       </span>
-      <input id="sessionName" formControlName="name" name="name" type="text" class="form-control" placeholder="session name..."
-      />
-    </div>
-    <div class="form-group" [ngClass]="{'error': presenter.invalid && presenter.touched}">
-      <label for="presenter">Presenter:</label>
-      <span *ngIf="presenter.invalid && (presenter.touched || mouseOver)">
-        <em *ngIf="presenter.errors.required">Required</em>
-      </span>
-      <input id="presenter" formControlName="presenter" type="text" class="form-control" placeholder="presenter..." />
-    </div>
-    <div class="form-group" [ngClass]="{'error': duration.invalid && duration.touched}">
-      <label for="duration">Duration:</label>
-      <span *ngIf="duration.invalid && (duration.touched || mouseOver)">
-        <em *ngIf="duration.errors.required">Required</em>
-      </span>
-      <select id="duration" formControlName="duration" class="form-control">
-        <option value="">Select duration ...</option>
-        <option value="1">Half Hour</option>
-        <option value="2">1 Hour</option>
-        <option value="3">Half Day</option>
-        <option value="4">Full Day</option>
-      </select>
-    </div>
-    <div class="form-group" [ngClass]="{'error': level.invalid && level.touched}">
-      <label for="level">Level:</label>
-      <span *ngIf="level.invalid && (level.touched || mouseOver)">
-        <em *ngIf="level.errors.required">Required</em>
-      </span>
-      <select id="level" formControlName="level" class="form-control">
-        <option value="">Select level ...</option>
-        <option value="Beginner">Beginner</option>
-        <option value="Intermediate">Intermediate</option>
-        <option value="Advanced">Advanced</option>
-      </select>
-    </div>
-    <div class="form-group" [ngClass]="{'error': abstract.invalid && abstract.touched}">
-      <label for="abstract">Abstract:</label>
-      <span *ngIf="abstract.invalid && (abstract.touched || mouseOver)">
-        <em *ngIf="abstract.errors.required">
-          Required
-        </em>
-        <em *ngIf="abstract.errors.maxLength">
-          Can not exceed 400 characters
-        </em>
-        <em *ngIf="abstract.errors.restrictedWords">
-          Restricted words found: {{ abstract.errors.restrictedWords }}
-        </em>
-      </span>
-      <textarea formControlName="abstract" id="abstract" rows=3 class="form-control" placeholder="abstract..."></textarea>
-    </div>
-    <span (mouseenter)="mouseOver=true" (mouseleave)="mouseOver=false">
-      <button type="submit" class="btn btn-primary" [disabled]="newFormGroup.invalid">Save</button>
-    </span>
-    <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
-  </form>
+      <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
+    </form>
+  </div>
 </div>
