--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -8,7 +8,8 @@
             (loginForm.controls.userName?.touched || mouseOver)">
                 Required
             </em>
-            <input required (ngModel)="userName" name="userName" id="userName" type="text" class="form-control" placeholder="User Name..." />
+            <input required (ngModel)="userName" name="userName" id="userName" type="text" class="form-control" placeholder="User Name..."
+            />
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
@@ -24,4 +25,9 @@
         </span>
         <button (click)="cancel()" type="button" class="btn btn-default radius-small">Cancel</button>
     </form>
+
+    <br>
+    <div *ngIf="loginInvalid" class="alert alert-danger">
+        Invalid Username or Password
+    </div>
 </div>
