--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -16,6 +16,7 @@
 
             <button type="submit" class="btn btn-primary">Save</button>
             <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
+            <button type="button" class="btn btn-warning" style="float:right" (click)="logout()">Log out</button>
         </form>
     </div>
 </div>
